--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@types/express": "^4.17.20",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "nodemon Pasha/presentation/api/index.ts",
+    "dev": "nodemon ./cmd/main.ts",
+    "start": "node ./cmd/main.ts",
     "test": "jest"
   },
   "devDependencies": {
@@ -14,16 +16,19 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.10",
-    "@types/nodemon": "^1.19.4",
+    "@types/nodemon": "^1.19.5",
     "@types/sequelize": "^4.28.17",
+    "@types/uuid": "^9.0.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "postgresql-client": "^2.10.1",
     "sequelize": "^6.34.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   }
 }
