--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@types/express": "^4.17.20",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4"
   },
   "scripts": {
     "dev": "nodemon ./cmd/main.ts",
@@ -22,8 +24,6 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "postgresql-client": "^2.10.1",
     "sequelize": "^6.34.0",
     "ts-jest": "^29.1.1",
