add save-order repo

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_DEFAULT_HOST=localhost
-POSTGRES_DEFAULT_PORT=5432
-POSTGRES_DEFAULT_DATABASE=order
-POSTGRES_DEFAULT_USER=postgres
-POSTGRES_DEFAULT_PASSWORD=root
-SERVER_DEFAULT_PORT=5000
+POSTGRES_HOST=localhost
+POSTGRES_PORT=12345
+POSTGRES_DATABASE=order
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=root
+SERVER_PORT=12345
