--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "@types/express": "^4.17.20",
+    "@types/pg": "^8.10.9",
+    "@types/pg-pool": "^2.0.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "pg-pool": "^3.6.1"
   },
   "scripts": {
     "dev": "nodemon app/cmd/main.ts",
@@ -24,7 +27,6 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "postgresql-client": "^2.10.1",
     "sequelize": "^6.34.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
