--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - "12345:5432"
     volumes:
       - ./dump:/var/lib/postgresql/data
+      - ./app/migrations/db.sql:/docker-entrypoint-initdb.d/init.sql
 
   postgres_test:
     container_name: "Ansyr-order-test"
@@ -29,3 +30,5 @@ services:
       - "12346:5432"
     volumes:
       - ./dump_test:/var/lib/postgresql/data
+      - ./app/migrations/db.sql:/docker-entrypoint-initdb.d/init.sql
+
