add tests + user

--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ POSTGRES_DATABASE=order
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=root
 SERVER_PORT=12345
+
+
+POSTGRES_TEST_PORT=12345
+POSTGRES_TEST_HOST='localhost'
+POSTGRES_TEST_USERNAME='testpostgres'
+POSTGRES_TEST_PASSWORD='testroot'
+POSTGRES_TEST_DATABASE='order_test'
