--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/sequelize": "^4.28.17",
     "@types/uuid": "^9.0.7",
     "babel-jest": "^29.7.0",
+    "bcrypt": "^5.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "sequelize": "^6.34.0",
