--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST='localhost'
 POSTGRES_PORT=12345
-POSTGRES_DATABASE=order
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=root
+POSTGRES_DATABASE='order'
+POSTGRES_USERNAME='postgres'
+POSTGRES_PASSWORD='root'
 SERVER_PORT=12345
 
 
