--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.20",
     "@types/pg": "^8.10.9",
     "@types/pg-pool": "^2.0.6",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
@@ -12,7 +14,7 @@
   "scripts": {
     "dev": "nodemon app/cmd/main.ts",
     "start": "node app/cmd/main.ts",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
